--- a/api-usuarios-spring/pom.xml
+++ b/api-usuarios-spring/pom.xml
@@ -57,6 +57,29 @@
   		<version>2.7.0</version>
 		</dependency>
 
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+		<groupId>org.flywaydb</groupId>
+		<artifactId>flyway-core</artifactId>
+		<version>11.7.2</version>
+		</dependency>
+		<dependency>
+		<groupId>org.flywaydb</groupId>
+		<artifactId>flyway-database-postgresql</artifactId>
+		<version>11.7.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
