--- a/api-usuarios-spring/src/main/resources/application.properties
+++ b/api-usuarios-spring/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=api-usuarios-spring
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/tcc_framework
+spring.datasource.username=tcc_user
+spring.datasource.password=tcc_pass
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+spring.flyway.default-schema=public
+
+spring.jpa.hibernate.ddl-auto=validate
